...
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_house"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/tab_map"
        android:icon="@drawable/ic_map_pin"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/tab_bookings"
        android:icon="@drawable/ic_calendar_days"
        android:title="@string/nav_bookings" />

    <item
        android:id="@+id/tab_account"
        android:icon="@drawable/ic_user_round"
        android:title="@string/nav_account" />

</menu>

