...
    <item
        android:id="@+id/tab_today"
        android:icon="@drawable/ic_list_checks"
        android:title="@string/operator_today_tab" />

    <item
        android:id="@+id/tab_bays"
        android:icon="@drawable/ic_battery_charging"
        android:title="@string/operator_bays_tab" />

    <item
        android:id="@+id/tab_account"
        android:icon="@drawable/ic_user_round"
...
