<?xml version="1.0" encoding="utf-8"?>
<!--
  File:    dialog_password.xml
  Module:  Prosumer Accounts
  Owner:   Malith
  Purpose: The inside of a confirmation dialog that needs the password, such as
           deactivating the account: an explanation and one password box.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="@dimen/space_s"
    android:paddingEnd="24dp">

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.SolarGrid.Body"
        tools:text="You will be logged out and only the Backoffice can reactivate your account." />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_m"
        android:hint="@string/login_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_key_round">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
